--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,29 @@
 <hl>New User</h1>
 
- <%= form_with scope: :Users, local: true do |form| %>
+ <%= form_with scope: :user, url: users_path, local: true do |form| %>
  <p>
-   <%= form.label :Username %><br>
-   <%= form.text_field :Username %>
+   <%= form.label :username %><br>
+   <%= form.text_field :username %>
  </p>
 
  <p>
-   <%= form.label :FirstName %><br>
-   <%= form.text_area :FirstName %>
+   <%= form.label :firstname %><br>
+   <%= form.text_area :firstname %>
  </p>
 
  <p>
-   <%= form.label :LastName %><br>
-   <%= form.text_area :LastName %>
+   <%= form.label :lastname %><br>
+   <%= form.text_area :lastname %>
  </p>
 
  <p>
-   <%= form.label :Email %><br>
-   <%= form.text_area :Email %>
+   <%= form.label :email %><br>
+   <%= form.text_area :email %>
  </p>
 
  <p>
-   <%= form.label :Phone %><br>
-   <%= form.text_area :Phone %>
+   <%= form.label :phone %><br>
+   <%= form.text_area :phone %>
  </p>
 
  <p>
