added index and some links

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome to the Sharex Application</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<%= link_to 'Users', controller: 'users' %>
+<%= link_to 'Receipt Records', controller: 'receipts' %>
+<%= link_to 'Groups', controller: 'groups' %>
