Added update and destroy functionality

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,12 +1,4 @@
 <hl>New Group </h1>
 
- <%= form_with scope: :group, url: groups_path, local: true do |form| %>
- <p>
-   <%= form.label :name %><br>
-   <%= form.text_field :name %>
- </p>
-
- <p>
-   <%= form.submit %>
- </p>
-<% end %>
+<%= render 'form' %>
+<%= link_to 'Back', groups_path %>
