--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing Groups</h1>
 
+<%= link_to 'New Group', new_group_path %>
+
 <table>
   <tr>
     <th>Group Name</th>
@@ -9,6 +11,10 @@
     <tr>
       <td><%= group.name %></td>
       <td><%= link_to 'Show', group_path(group) %></td>
+      <td><%= link_to 'Edit', edit_group_path(group) %></td>
+      <td><%= link_to 'Destroy', group_path(group),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
