--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing Receipt Records</h1>
 
+<%= link_to 'New Receipt Record', new_receipt_path %>
+
 <table>
   <tr>
     <th>Title</th>
@@ -15,6 +17,10 @@
       <td><%= receipt.expense %></td>
       <td><%= receipt.comments %></td>
       <td><%= link_to 'Show', receipt_path(receipt) %></td>
+      <td><%= link_to 'Edit', edit_receipt_path(receipt) %></td>
+      <td><%= link_to 'Destroy', receipt_path(receipt),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
