--- a/app/views/receipts/new.html.erb
+++ b/app/views/receipts/new.html.erb
@@ -1,29 +1,4 @@
  <hl>New Receipt Record</h1>
 
-  <%= form_with scope: :receipt, url: receipts_path, local: true do |form| %>
-  <p>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
-  </p>
-
-  <p>
-    <%= form.label :location %><br>
-    <%= form.text_area :location %>
-  </p>
-
-  <p>
-    <%= form.label :expense %><br>
-    <%= form.text_area :expense %>
-  </p>
-
-  <p>
-    <%= form.label :comments %><br>
-    <%= form.text_area :comments %>
-  </p>
-
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
-
+<%= render 'form' %>
 <%= link_to 'Back', receipts_path %>
