--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing Users</h1>
 
+<%= link_to 'New User', new_user_path %>
+
 <table>
   <tr>
     <th>Username</th>
@@ -17,6 +19,10 @@
       <td><%= user.email %></td>
       <td><%= user.phone %></td>
       <td><%= link_to 'Show', user_path(user) %></td>
+      <td><%= link_to 'Edit', edit_user_path(user) %></td>
+      <td><%= link_to 'Destroy', user_path(user),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
