--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,34 +1,4 @@
 <hl>New User</h1>
 
- <%= form_with scope: :user, url: users_path, local: true do |form| %>
- <p>
-   <%= form.label :username %><br>
-   <%= form.text_field :username %>
- </p>
-
- <p>
-   <%= form.label :firstname %><br>
-   <%= form.text_area :firstname %>
- </p>
-
- <p>
-   <%= form.label :lastname %><br>
-   <%= form.text_area :lastname %>
- </p>
-
- <p>
-   <%= form.label :email %><br>
-   <%= form.text_area :email %>
- </p>
-
- <p>
-   <%= form.label :phone %><br>
-   <%= form.text_area :phone %>
- </p>
-
- <p>
-   <%= form.submit %>
- </p>
-<% end %>
-
+<%= render 'form' %>
 <%= link_to 'Back', users_path %>
