--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Listing Receipt Records</h1>
 
 <%= link_to 'New Receipt Record', new_receipt_path %>
+  <%= link_to 'Home', controller: 'welcome' %>
 
 <table>
   <tr>
