--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Listing Groups</h1>
 
 <%= link_to 'New Group', new_group_path %>
+<%= link_to 'Home', controller: 'welcome' %>
 
 <table>
   <tr>
