--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,5 +3,8 @@
   <%= @group.name %>
 </p>
 
+<%= link_to 'New Member', new_user_path(@user) %>
+
 <%= link_to 'Edit', edit_group_path(@group) %> |
 <%= link_to 'Back', groups_path %>
+<%= link_to 'Home', controller: 'welcome' %>
