--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -20,3 +20,4 @@
 
 <%= link_to 'Edit', edit_receipt_path(@receipt) %> |
 <%= link_to 'Back', receipts_path %>
+  <%= link_to 'Home', controller: 'welcome' %>
