--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,6 +15,11 @@
 <% end %>
 
 <p>
+  <%= form.label :group_id %><br>
+  <%= form.text_field :group_id %>
+</p>
+
+<p>
   <%= form.label :username %><br>
   <%= form.text_field :username %>
 </p>
