--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,6 +3,39 @@
   <%= @group.name %>
 </p>
 
+<table>
+  <thead>
+  <tr>
+    <strong>Name:</strong>
+    <%= @group.name %>
+  </tr>
+  <tr>
+    <th>Username</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Email</th>
+    <th>Phone</th>
+  </tr>
+  </thead>
+
+<tbody>
+  <% @group.users.each do |user| %>
+    <tr>
+      <td><%= user.username %></td>
+      <td><%= user.firstname %></td>
+      <td><%= user.lastname %></td>
+      <td><%= user.email %></td>
+      <td><%= user.phone %></td>
+      <td><%= link_to 'Show', user_path(user) %></td>
+      <td><%= link_to 'Edit', edit_user_path(user) %></td>
+      <td><%= link_to 'Destroy', user_path(user),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+
 <%= link_to 'New Member', new_user_path(@user) %>
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
