--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
 
 <table>
   <tr>
+    <th>Group ID#</th>
     <th>Username</th>
     <th>First Name</th>
     <th>Last Name</th>
@@ -14,6 +15,7 @@
 
   <% @users.each do |user| %>
     <tr>
+      <td><%= user.group_id %></td>
       <td><%= user.username %></td>
       <td><%= user.firstname %></td>
       <td><%= user.lastname %></td>
