Added receipts to user reference

--- a/app/views/receipts/_form.html.erb
+++ b/app/views/receipts/_form.html.erb
@@ -14,6 +14,10 @@
 </div>
 <% end %>
 
+<p>
+  <%= form.label :user_id %><br>
+  <%= form.text_field :user_id %>
+</p>
 
 <p>
   <%= form.label :title %><br>
